[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wtforms_aceditor"
version = "0.0.2"
description = "wtforms aceditor component"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["wtforms", "flask", "aceditor"]
dependencies = [
    "wtforms<=2.3.3",
    "markupsafe"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["flask", "flask-wtf"]

[project.urls]
Homepage = "https://github.com/WorldException/wtforms_aceditor"

